# AutoCal

./: .gitignore  README.md  requirements.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  chat.jsx  fx.jsx  gcal.js  index.css  main.jsx  md.jsx  mock.js  motorsport.css  terminal.css  theme.css  toon.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/components/: AgendaEdit.jsx  Sidebar.jsx  ui.jsx
frontend/src/pages/: Activity.jsx  Calendar.jsx  Chat.jsx  Dashboard.jsx  Flare.jsx  Forge.jsx  Lab.jsx  Notes.jsx  Settings.jsx  Shell.jsx  flare.css  forge.css  lab.css
src/: agent.py  main.py  server.py  store.py  sync.py
